# SOFT_Projet_smart_minuteur_douche

HARDWARE/DEVELOPPEMENT/Programme TEST python BLE/TEST_Projet_SMART_BLE/: main.py  (+1 more)
HARDWARE/DEVELOPPEMENT/ProgrammeArduino_Minuteur_V0_0/: ProgrammeArduino_Minuteur_V0_0.ino
HARDWARE/DEVELOPPEMENT/ProgrammeESP_IDF_Minuteur de douches/MinuteurDouche_V_1_2_1/main/: CMakeLists.txt  ble_spp_server.c  ble_spp_server.h  button_handler.c  button_handler.h  led_control.c  led_control.h  main.c  oled_display.c  oled_display.h  timer_manager.c  timer_manager.h  user_context.h
HARDWARE/DEVELOPPEMENT/ProgrammeTESTArduinoBLE/: ProgrammeTESTArduinoBLE.ino
HARDWARE/ETUDE/DCD/: DiagrammeContexteDonnée_V0_1.drawio  DiagrammeContexteDonnée_V0_2.drawio
HARDWARE/ETUDE/DFD/: DFD_V0_0.drawio  DFD_V0_1.drawio
HARDWARE/ETUDE/SF1D/: SF1D_V0-2.drawio  SF1D_V0-3.drawio  SF1D_V0-4.1.drawio  SF1D_V0-4.drawio
HARDWARE/ETUDE/SF1N/: SF1N.drawio
HARDWARE/ETUDE/Schema structurel de principe/: ToDo_DL.docx
SOFTWARE/DEVELOPPEMENT/: Projet_SMART_minuteur_douche.db
SOFTWARE/DEVELOPPEMENT/BDD/: Projet_SMART_minuteur_douche.db
SOFTWARE/DEVELOPPEMENT/backend/: Projet_SMART_minuteur_douche.db  pom.xml
SOFTWARE/DEVELOPPEMENT/frontend/: package-lock.json  package.json
SOFTWARE/ETUDE/DFD/: DFD_V0_2.drawio
SOFTWARE/ETUDE/Diagramme UML/: DiagrammeUML_V0_1.drawio
SOFTWARE/ETUDE/Diagramme de contexte de données/: DiagrammeContexteDonnée.drawio
SOFTWARE/ETUDE/Dossier de Conception Technique – Interface Web du Minuteur de Douche/: Dossier de Conception Technique.docx  SchémaSQL.drawio
(+58 files in other folders)
